tests/compile_fail/debug/duplicate_fmt_on_variant.stderr
error: only single `#[debug(...)]` attribute is allowed here
 --> tests/compile_fail/debug/duplicate_fmt_on_variant.rs:4:13
  |
4 |     #[debug("Second")]
  |             ^^^^^^^^
